--- a/legal/content-guidelines.html
+++ b/legal/content-guidelines.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 03 2021 00:15:34 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Apr 12 2021 04:48:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6019000d20c43995e99815e5" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,8 +7,10 @@
   <meta content="Storipress wants to be a safe place for expression and discussion. However, we also strongly believe that criticism and discussion of controversial issues are a fundamental pillar of our fourth estate and an integral part of any public discourse, and we understand great journalism has a swashbuckling spirit." name="description">
   <meta content="Content Guidelines | Storipress" property="og:title">
   <meta content="Storipress wants to be a safe place for expression and discussion. However, we also strongly believe that criticism and discussion of controversial issues are a fundamental pillar of our fourth estate and an integral part of any public discourse, and we understand great journalism has a swashbuckling spirit." property="og:description">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
   <meta content="Content Guidelines | Storipress" property="twitter:title">
   <meta content="Storipress wants to be a safe place for expression and discussion. However, we also strongly believe that criticism and discussion of controversial issues are a fundamental pillar of our fourth estate and an integral part of any public discourse, and we understand great journalism has a swashbuckling spirit." property="twitter:description">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -38,12 +40,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  End Google Tag Manager  -->
 </head>
 <body class="body">
-  <a href="#Footer-CTA" class="button stickybutton w-inline-block">
-    <div class="text-block-17">Join Beta</div>
-  </a>
   <div data-collapse="medium" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
-      <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+      <a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" data-w-id="45b16a4a-73e9-0d18-9e54-de20285e9d42" class="dropdown w-dropdown">
@@ -53,19 +52,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="../build" class="dropdown-link w-dropdown-link">Builder</a>
+                <a href="../build.html" class="dropdown-link w-dropdown-link">Builder</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../create" class="dropdown-link w-dropdown-link">Editor</a>
+                <a href="../create.html" class="dropdown-link w-dropdown-link">Editor</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../manage" class="dropdown-link w-dropdown-link">Workflow</a>
+                <a href="../manage.html" class="dropdown-link w-dropdown-link">Workflow</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
+                <a href="../engage.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
+                <a href="../hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
               </div>
             </nav>
           </div>
@@ -76,47 +75,47 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="../vs/wordpress" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
+                <a href="../vs/wordpress.html" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/wix" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
+                <a href="../vs/wix.html" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/medium" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
+                <a href="../vs/medium.html" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
+                <a href="../vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
               </div>
             </nav>
           </div>
-          <a href="../pricing" class="nav-item w-nav-link">Pricing</a>
+          <a href="../pricing.html" class="nav-item w-nav-link">Pricing</a>
           <div class="mm-parent">
             <div class="mm-content-parent">
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Features</h1>
-                <a href="../build" class="mm-button">Builder</a>
-                <a href="../create" class="mm-button">Editor</a>
-                <a href="../manage" class="mm-button">Workflow</a>
-                <a href="../engage" class="mm-button">Engage &amp; Earn</a>
-                <a href="../hosting" class="mm-button">Hosting &amp; Performance</a>
+                <a href="../build.html" class="mm-button">Builder</a>
+                <a href="../create.html" class="mm-button">Editor</a>
+                <a href="../manage.html" class="mm-button">Workflow</a>
+                <a href="../engage.html" class="mm-button">Engage &amp; Earn</a>
+                <a href="../hosting.html" class="mm-button">Hosting &amp; Performance</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Storipress vs</h1>
-                <a href="../vs/wordpress" class="mm-button">vs WordPress</a>
-                <a href="../vs/wix" class="mm-button">vs Wix, Squarespace</a>
-                <a href="../vs/medium" class="mm-button">vs Medium</a>
-                <a href="../vs/what-wordpress-really-costs-you" class="mm-button">WordPress: Hidden Costs</a>
+                <a href="../vs/wordpress.html" class="mm-button">vs WordPress</a>
+                <a href="../vs/wix.html" class="mm-button">vs Wix, Squarespace</a>
+                <a href="../vs/medium.html" class="mm-button">vs Medium</a>
+                <a href="../vs/what-wordpress-really-costs-you.html" class="mm-button">WordPress: Hidden Costs</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Pricing</h1>
-                <a href="../pricing" class="mm-button">Pricing</a>
+                <a href="../pricing.html" class="mm-button">Pricing</a>
               </div>
             </div>
           </div>
         </nav>
       </div>
-      <div class="div-block-1328">
-        <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
+      <div class="nav-joinbeta-parent">
+        <a href="#" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
         <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
@@ -145,11 +144,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-block-1451">
       <h1 class="heading-24">Content Guidelines</h1>
       <div class="div-block-1452">
-        <a href="../legal/terms" class="legal-pagelinks">Terms of Service</a>
-        <a href="../legal/global-privacy-policy" class="legal-pagelinks">Global Privacy Policy</a>
-        <a href="../legal/publisher-agreement" class="legal-pagelinks">Publisher Agreement</a>
-        <a href="../legal/content-guidelines" aria-current="page" class="legal-pagelinks w--current">Content Guidelines</a>
-        <a href="../legal/cookie-policy" class="legal-pagelinks">Cookie Policy</a>
+        <a href="../legal/terms.html" class="legal-pagelinks">Terms of Service</a>
+        <a href="../legal/global-privacy-policy.html" class="legal-pagelinks">Global Privacy Policy</a>
+        <a href="../legal/publisher-agreement.html" class="legal-pagelinks">Publisher Agreement</a>
+        <a href="../legal/content-guidelines.html" aria-current="page" class="legal-pagelinks w--current">Content Guidelines</a>
+        <a href="../legal/cookie-policy.html" class="legal-pagelinks">Cookie Policy</a>
       </div>
     </div>
   </div>
@@ -195,38 +194,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="legal-paragraph-text">Albion Media Pty. Ltd.<br>8 Brewer Ave.,<br>Liberty Grove, NSW 2138<br>Australia</p>
     </div>
   </div>
-  <div id="Footer-CTA" class="pre-footer">
-    <div class="pre-footer-parent">
-      <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
-        <div>
-          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
-          <div class="cta-pricing-description">Build your publication for free (no trial period, no credit card). Just add a plan for a custom domain when you&#x27;re ready.</div>
-        </div>
-        <a href="../pricing" class="button square-corners left-align w-button">View Pricing</a>
-        <link rel="prefetch" href="/pricing">
-      </div>
-      <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent footer-cta">
-        <h2 class="heading-12">Get access before everyone else.</h2>
-        <div class="form-block-2 w-form">
-          <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
-            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button">
-          </form>
-          <div class="success-message w-form-done">
-            <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
-          </div>
-          <div class="error-message w-form-fail">
-            <div class="text-block-3">Something went wrong in submitting the form, try again</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="../index" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
-          <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
+          <a href="../index.html" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <div class="footer-text location">Sydney, Australia<br>Taipei + Taichung, Taiwan<br></div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a>
             <a href="https://www.facebook.com/Storipress" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/facebook.svg" loading="lazy" alt="Facebook Logo"></a>
@@ -239,22 +212,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h5 class="footer-list-heading">Product</h5>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <a href="../manage" class="footer-text">Workflow</a>
+                <a href="../manage.html" class="footer-text">Workflow</a>
               </li>
               <li>
-                <a href="../create" class="footer-text">Editor</a>
+                <a href="../create.html" class="footer-text">Editor</a>
               </li>
               <li>
-                <a href="../build" class="footer-text">Builder</a>
+                <a href="../build.html" class="footer-text">Builder</a>
               </li>
               <li>
-                <a href="../engage" class="footer-text">Engage &amp; Earn</a>
+                <a href="../engage.html" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="../hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="../hosting.html" class="footer-text">Hosting &amp; Performance</a>
               </li>
               <li>
-                <a href="../pricing" class="footer-text">Pricing</a>
+                <a href="../pricing.html" class="footer-text">Pricing</a>
               </li>
             </ul>
           </div>
@@ -262,16 +235,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h5 class="footer-list-heading">Compare</h5>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <a href="../vs/wordpress" class="footer-text">WordPress</a>
+                <a href="../vs/wordpress.html" class="footer-text">WordPress</a>
               </li>
               <li>
-                <a href="../vs/wix" class="footer-text">Wix</a>
+                <a href="../vs/wix.html" class="footer-text">Wix</a>
               </li>
               <li>
-                <a href="../vs/medium" class="footer-text">Medium</a>
+                <a href="../vs/medium.html" class="footer-text">Medium</a>
               </li>
               <li>
-                <a href="../vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
+                <a href="../vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a>
               </li>
             </ul>
           </div>
@@ -283,19 +256,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="text-block-61">We&#x27;re hiring!</div>
               </li>
               <li>
-                <a href="../legal/terms" class="footer-text">Terms of Service</a>
+                <a href="../legal/terms.html" class="footer-text">Terms of Service</a>
               </li>
               <li>
-                <a href="../legal/global-privacy-policy" class="footer-text">Global Privacy Policy</a>
+                <a href="../legal/global-privacy-policy.html" class="footer-text">Global Privacy Policy</a>
               </li>
               <li>
-                <a href="../legal/publisher-agreement" class="footer-text">Publisher Agreement</a>
+                <a href="../legal/publisher-agreement.html" class="footer-text">Publisher Agreement</a>
               </li>
               <li>
-                <a href="../legal/content-guidelines" aria-current="page" class="footer-text w--current">Content Guidelines</a>
+                <a href="../legal/content-guidelines.html" aria-current="page" class="footer-text w--current">Content Guidelines</a>
               </li>
               <li>
-                <a href="../legal/cookie-policy" class="footer-text">Cookie Policy</a>
+                <a href="../legal/cookie-policy.html" class="footer-text">Cookie Policy</a>
               </li>
             </ul>
           </div>
@@ -308,7 +281,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script>
