--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 03 2021 00:02:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Apr 12 2021 04:48:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,10 +7,10 @@
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." name="description">
   <meta content="What WordPress really costs you | Storipress" property="og:title">
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." property="og:description">
-  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1610941039/1500x500" property="og:image">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
   <meta content="What WordPress really costs you | Storipress" property="twitter:title">
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." property="twitter:description">
-  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1610941039/1500x500" property="twitter:image">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body class="body">
   <div data-collapse="medium" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
-      <a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+      <a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" data-w-id="45b16a4a-73e9-0d18-9e54-de20285e9d42" class="dropdown w-dropdown">
@@ -52,19 +52,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="../build" class="dropdown-link w-dropdown-link">Builder</a>
+                <a href="../build.html" class="dropdown-link w-dropdown-link">Builder</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../create" class="dropdown-link w-dropdown-link">Editor</a>
+                <a href="../create.html" class="dropdown-link w-dropdown-link">Editor</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../manage" class="dropdown-link w-dropdown-link">Workflow</a>
+                <a href="../manage.html" class="dropdown-link w-dropdown-link">Workflow</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
+                <a href="../engage.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
+                <a href="../hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
               </div>
             </nav>
           </div>
@@ -75,46 +75,46 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="../vs/wordpress" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
+                <a href="../vs/wordpress.html" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/wix" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
+                <a href="../vs/wix.html" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/medium" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
+                <a href="../vs/medium.html" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="../vs/what-wordpress-really-costs-you" aria-current="page" class="dropdown-link w-dropdown-link w--current">WordPress: Hidden Costs</a>
+                <a href="../vs/what-wordpress-really-costs-you.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">WordPress: Hidden Costs</a>
               </div>
             </nav>
           </div>
-          <a href="../pricing" class="nav-item w-nav-link">Pricing</a>
+          <a href="../pricing.html" class="nav-item w-nav-link">Pricing</a>
           <div class="mm-parent">
             <div class="mm-content-parent">
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Features</h1>
-                <a href="../build" class="mm-button">Builder</a>
-                <a href="../create" class="mm-button">Editor</a>
-                <a href="../manage" class="mm-button">Workflow</a>
-                <a href="../engage" class="mm-button">Engage &amp; Earn</a>
-                <a href="../hosting" class="mm-button">Hosting &amp; Performance</a>
+                <a href="../build.html" class="mm-button">Builder</a>
+                <a href="../create.html" class="mm-button">Editor</a>
+                <a href="../manage.html" class="mm-button">Workflow</a>
+                <a href="../engage.html" class="mm-button">Engage &amp; Earn</a>
+                <a href="../hosting.html" class="mm-button">Hosting &amp; Performance</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Storipress vs</h1>
-                <a href="../vs/wordpress" class="mm-button">vs WordPress</a>
-                <a href="../vs/wix" class="mm-button">vs Wix, Squarespace</a>
-                <a href="../vs/medium" class="mm-button">vs Medium</a>
-                <a href="../vs/what-wordpress-really-costs-you" aria-current="page" class="mm-button w--current">WordPress: Hidden Costs</a>
+                <a href="../vs/wordpress.html" class="mm-button">vs WordPress</a>
+                <a href="../vs/wix.html" class="mm-button">vs Wix, Squarespace</a>
+                <a href="../vs/medium.html" class="mm-button">vs Medium</a>
+                <a href="../vs/what-wordpress-really-costs-you.html" aria-current="page" class="mm-button w--current">WordPress: Hidden Costs</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Pricing</h1>
-                <a href="../pricing" class="mm-button">Pricing</a>
+                <a href="../pricing.html" class="mm-button">Pricing</a>
               </div>
             </div>
           </div>
         </nav>
       </div>
-      <div class="div-block-1328">
+      <div class="nav-joinbeta-parent">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
@@ -559,20 +559,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </li>
       </ul>
       <p class="paragraph">You’re now armed with knowledge! Hopefully this guide was useful to give you a general overview of WordPress compared to Storipress.<br></p>
-      <p class="paragraph"><strong>We can help you migrate to Storipress from WordPress, for free!</strong> Save time and let the Storipress team do all the work on your behalf; no coding, no configuration, no worries. This migration is included with any <a href="../pricing" class="blog-link">Storipress Enterprise Plan</a>.<br></p>
+      <p class="paragraph"><strong>We can help you migrate to Storipress from WordPress, for free!</strong> Save time and let the Storipress team do all the work on your behalf; no coding, no configuration, no worries. This migration is included with any <a href="../pricing.html" class="blog-link">Storipress Enterprise Plan</a>.<br></p>
     </div>
   </div>
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">More comparisons</h2>
     <div class="div-block-1397">
-      <a href="../vs/wordpress" class="other-features-parent comparisons w-inline-block">
+      <a href="../vs/wordpress.html" class="other-features-parent comparisons w-inline-block">
         <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h3 class="heading-11 comparisons">WordPress</h3>
-          <div class="text-block-45">With powerful collaboration features, comparing WordPress to Storipress is like comparing Notepad to Google Docs.</div>
+          <div class="text-block-45">With powerful collaboration features, comparing Storipress and WordPress is like comparing Notepad and Google Docs.</div>
         </div>
       </a>
-      <a href="../vs/medium" class="other-features-parent comparisons w-inline-block">
+      <a href="../vs/medium.html" class="other-features-parent comparisons w-inline-block">
         <div class="other-image-parent comparison"><img src="../images/Medium.svg" loading="lazy" alt="Medium Logomark" class="image-66"></div>
         <div class="div-block-1400">
           <h3 class="heading-11 comparisons">Medium</h3>
@@ -591,7 +591,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free (no trial period, no credit card). Just add a plan for a custom domain when you&#x27;re ready.</div>
         </div>
-        <a href="../pricing" class="button square-corners left-align w-button">View Pricing</a>
+        <a href="../pricing.html" class="button square-corners left-align w-button">View Pricing</a>
         <link rel="prefetch" href="/pricing">
       </div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent footer-cta">
@@ -614,8 +614,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="../index" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
-          <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
+          <a href="../index.html" class="footer-logo-link w-inline-block"><img src="../images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <div class="footer-text location">Sydney, Australia<br>Taipei + Taichung, Taiwan<br></div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a>
             <a href="https://www.facebook.com/Storipress" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/facebook.svg" loading="lazy" alt="Facebook Logo"></a>
@@ -628,22 +628,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h5 class="footer-list-heading">Product</h5>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <a href="../manage" class="footer-text">Workflow</a>
+                <a href="../manage.html" class="footer-text">Workflow</a>
               </li>
               <li>
-                <a href="../create" class="footer-text">Editor</a>
+                <a href="../create.html" class="footer-text">Editor</a>
               </li>
               <li>
-                <a href="../build" class="footer-text">Builder</a>
+                <a href="../build.html" class="footer-text">Builder</a>
               </li>
               <li>
-                <a href="../engage" class="footer-text">Engage &amp; Earn</a>
+                <a href="../engage.html" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="../hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="../hosting.html" class="footer-text">Hosting &amp; Performance</a>
               </li>
               <li>
-                <a href="../pricing" class="footer-text">Pricing</a>
+                <a href="../pricing.html" class="footer-text">Pricing</a>
               </li>
             </ul>
           </div>
@@ -651,16 +651,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h5 class="footer-list-heading">Compare</h5>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <a href="../vs/wordpress" class="footer-text">WordPress</a>
+                <a href="../vs/wordpress.html" class="footer-text">WordPress</a>
               </li>
               <li>
-                <a href="../vs/wix" class="footer-text">Wix</a>
+                <a href="../vs/wix.html" class="footer-text">Wix</a>
               </li>
               <li>
-                <a href="../vs/medium" class="footer-text">Medium</a>
+                <a href="../vs/medium.html" class="footer-text">Medium</a>
               </li>
               <li>
-                <a href="../vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
+                <a href="../vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a>
               </li>
             </ul>
           </div>
@@ -672,19 +672,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="text-block-61">We&#x27;re hiring!</div>
               </li>
               <li>
-                <a href="../legal/terms" class="footer-text">Terms of Service</a>
+                <a href="../legal/terms.html" class="footer-text">Terms of Service</a>
               </li>
               <li>
-                <a href="../legal/global-privacy-policy" class="footer-text">Global Privacy Policy</a>
+                <a href="../legal/global-privacy-policy.html" class="footer-text">Global Privacy Policy</a>
               </li>
               <li>
-                <a href="../legal/publisher-agreement" class="footer-text">Publisher Agreement</a>
+                <a href="../legal/publisher-agreement.html" class="footer-text">Publisher Agreement</a>
               </li>
               <li>
-                <a href="../legal/content-guidelines" class="footer-text">Content Guidelines</a>
+                <a href="../legal/content-guidelines.html" class="footer-text">Content Guidelines</a>
               </li>
               <li>
-                <a href="../legal/cookie-policy" class="footer-text">Cookie Policy</a>
+                <a href="../legal/cookie-policy.html" class="footer-text">Cookie Policy</a>
               </li>
             </ul>
           </div>
@@ -697,7 +697,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
   <script>
