updated pricing copy

--- a/pricing.html
+++ b/pricing.html
@@ -604,7 +604,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div>
         <div class="pricing-more-features-image-parent"><img src="images/Smiley.svg" loading="lazy" alt="" class="image-35"></div>
         <h4 class="all-plans-titile">Free for Students and Non-Profits</h4>
-        <div class="all-plans-description">Storipress is a proud supporter of youth media and ethical journalism. That&#x27;s why we provide unlimited seats on our Plus plan with no bandwidth restrictions to student publications and not-for-profits. <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="blog-link">Shoot us an email to determine eligibility.</a>
+        <div class="all-plans-description">Storipress proudly supports youth media and ethical journalism and provides unlimited seats on our Publisher plan to student publications and not-for-profits. <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="blog-link">Shoot us an email to determine eligibility.</a>
         </div>
       </div>
       <div>
